--- a/Prateek/Web-Dev/CSS/basic1.css
+++ b/Prateek/Web-Dev/CSS/basic1.css
@@ -137,7 +137,7 @@
 .divv{
 
     /* DISTANCE BETWEEN BORDER AND ITS CONTENT  */
-    border: 1px red solid;
+    border: 1px solid red;
 
     padding-left: 10px;
     padding-right: 20px;
